Include computation for arbitrary background albedo. Adjust output file layout and update output test file supplied with sources.

--- a/src/cloud.cfg
+++ b/src/cloud.cfg
@@ -2,7 +2,7 @@ Configuration file for program "CLOUD".
 
 &CLOUDControl
 bFinite        = .TRUE.
-chLUTPath      = '/media/memory/sandbox/cloud/'
+chLUTPath      = '/media/permanent/development/development_tnauss/satellite_retrievals/slalom/luts/'
 chLUT_RInf     = 'lut_RInf_0856_aef_10.dat'
 fg             = 0.850013
 fTauMin        = 3
@@ -20,9 +20,13 @@ fPZenStep      = 2.0
 fRelAzmMin     = 0.0
 fRelAzmMax     = 1.0
 fRelAzmStep    = 2.0
+fAlbedoMin     = 0.00
+fAlbedoMax     = 0.10
+fAlbedoStep    = 0.20
 bPrint         = .FALSE.
 bPause         = .FALSE.
 /
+
 
 Explanation of the variables:
 bFinite:     Run radiative transfer computation for finite (true) or semi-infinite (false) media.
@@ -46,3 +50,6 @@ fRelAzmMax:  Maximum value of relative azimuth angle.
 fRelAzmStep: Step for computation of relative azimuth angle.
 bPrint:      Print tons of information while running.
 bPause:      Pause at the end of the program (set 0 in batch mode).
+fAlbedoMin:  Minimum value of albedo.
+fAlbedoMax:  Maximum value of albedo.
+fAlbedoStep: Step for computation of albedo.
